Version 3.5.0
* Post DiFX 2.4
* Remove duplicate RDATE keywords from AG and ML tables
* With changes in difxio, ensure same-day EOPs are equal before merging jobs
* plotpcal2 : second attempt to plot pcals in a more general way.  Still not super satisfactory.

Version 3.4.0
* Add command line option --primary-band.  This causes a keyword to be added to the output FITS file.  Intended for VLITE.
* makefits: check for files being multiple of 2880 bytes
* fixes in pulse cal handling: better logic in closing files, some improvements in code clarity and some minor performance improvements.
  - this fixes a bad bug when number of jobs is large; max number of file descriptors got exceeded.
* print MJD range of converted output
* add utility plotpcal
* update pulse cal: Use new, more natural format for .difx/PCAL* files made by mpifxcorr
* allow addition of history though external file (--history option)
* add DELTAT keyword to ModelComps table.  Required for != 2 minute polynomial intervals
* Tsys: replace 999 with NaN for one case of invalid Tsys
* Version for DiFX-2.4, Nov 4, 2014

Version 3.3.0
* Improved clarity in generation of Flag, Tsys, Pcal, Gain and Weather tables: prioritized sources of data
* Fix off-by-one timestamp error in the sniffer output files
* All times are UTC (always have been).  Change variables and comments to reflect this and avoid some confusion.
* Add utility to show which sources of calibration data (GN, PH, FG, WX, TS) will be used by difx2fits (called showcal)
* Version for DiFX-2.3, Dec 20, 2013

Version 3.2.0
* Fix for correlation of mismatched sidebands.  Requires contemporaneous
upgrade of difxio.
* Add DIFX_LABEL env var to FITS files
* Make sniffer plots more consistent with AIPS.  They will always show USB now and should have the same phase sense.
* Use the SX gain table rows when SX observing is used.  Thanks to James Miller-Jones for reporting the problem.